--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> HZC Home </title>
 
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/estilos.css">
 
     <!-- FONTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +15,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <button class="cabecalho__menu" aria-label="Menu"> <i></i> </button>
+        <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+        <button class="cabecalho__notificacao" aria-label="Notificação"> <i></i> </button>
+    </header>
 </body>
 </html>
