--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"> <i></i> </button>
+        <p class="cabecalho__perfil"> Bruno Lopez </p>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
         <button class="cabecalho__notificacao" aria-label="Notificação"> <i></i> </button>
     </header>
@@ -31,7 +32,7 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Inicio</h2>
-        <article class="cartao cartao--destaque">
+        <article class="cartao cartao--destaque destaque-video">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque"> Video em destaque </p>
@@ -42,7 +43,33 @@
                 <button class="cartao__botao cartao__botao--destaque cartao__botao--play"> Assistir agora </button>
             </div>
         </article>
-        <section class="secao">
+        <article class="cartao cartao--recentes videos-recentes">
+            <h3 class="cartao__titulo"> Videos Recentes </h3>
+            <a href="#" class="cartao__link"> Ver todos </a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+            </ul>
+        </article>
+        <section class="secao secao-videos">
             <h3 class="titulo--secao"> Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="video" class="cartao__imagem">
@@ -81,7 +108,49 @@
                 </div>
             </article>
         </section>
-        <section class="secao">
+        <article class="cartao cartao--recentes produtos-recentes">
+            <h3 class="cartao__titulo"> Produtos Recentes </h3>
+            <a href="#" class="cartao__link"> Ver todos </a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="thubnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo"> HZC - Love machine</h4>
+                    <p class="cartao__item-perfil"> Bruno Lopez </p>
+                </li>
+            </ul>
+        </article>
+        <article class="cartao cartao--destaque destaque-produtos">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Vídeo em destaque</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+            </div>
+        </article>
+        <section class="secao secao-produtos">
             <h3 class="titulo--secao"> Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="video" class="cartao__imagem">
